16/5/2018 1.8.0.1
    admin visible changes:
    * fixed the creation zipping and checksumming of info_map.txt and index.yaml

15/5/2018 1.8.0.0

    Epoch of the template begins.
    admin visible changes:
    * index.yaml can have templates for IIDs making it much shorter and concise

14/5/2018 1.7.4.4

    user visible changes:
    * utils.download_and_cache_file_or_url: fixed case where cached checksum file exists but has wrong checksum.
           now such file will be erased. Also handle cases where cache folder is a file or does not exist.
    * removed some asserts
    * after uninstall remove previous require.yaml if the new one does not contain anything
    * old_require.yaml is created after install as a copy of the previous require.yaml - if there was one

    admin visible changes:
    * InstlAdmin replaced many print's with self.progress
    * IGNORE_BELOW_REPO_REV new configVar can be used to specify repo-rev that will be ignored by InstAdmin operations.
    * another fix for: filter-infomap command: fix the case where the same path belonged to more than 1 IID in the same infomap and would appear twice in the infomap

    programmer visible changes:
    * PlatformSpecificHelper_X.copy_file_to_file, new parameter check_exist, if true will skip the copy when source file
        does not exist. Default is check_exist=False.

10/5/2018 1.7.4.2

    admin visible changes:
    * some changes to the way the db is opened in order to allow separate launches of instl to use the same db, when specifying --db option on the command line
    * commands read-info-map, read-yaml now accept --db option on the command line
    * filter-infomap command: fix the case where the same path belonged to more than 1 IID in the same infomap and would appear twice in the infomap

9/5/2018 1.7.4.1

    user visible changes:
    * print repo-rev to self.progress after reading index

    admin visible changes: